test/scc/pp/errors/032.a
032.t:1:5: error: token '++' is not valid in preprocessor expressions